--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <body>
         <p>Smaran is a good boy</p>
         Smaran is not a good boy
+        smaran lai aaudiana
        
     </body>
 </html>
